--- a/interactive/AR/webxrdemo/styles.css
+++ b/interactive/AR/webxrdemo/styles.css
@@ -9,7 +9,7 @@ model-viewer {
 }
 
 #ar-button {
-  background-image: url(../../interactive/AR/webxrdemo/ar_icon.png);
+  background-image: url(./ar_icon.png);
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px 50%;
