--- a/interactive/AR/webxrdemo/styles.css
+++ b/interactive/AR/webxrdemo/styles.css
@@ -3,9 +3,18 @@
   display: none;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 model-viewer {
   background-color: #eee;
   overflow-x: hidden;
+  width: 100%;
+  height: 90%;
 }
 
 #ar-button {
